syntax = "proto3";

package snarkd_common;

message Digest {
    bytes inner = 1;
}